--- a/tasky/src/App.css
+++ b/tasky/src/App.css
@@ -1,22 +1,3 @@
-
-h1 {
-  text-align: center;
-  background-color: grey;
-  color: white;
-  padding: 14px 20px;
-  margin: 8px 0;
-  border: none;
-  border-radius: 4px;
-}
-
-div {
-  padding: 20px;
-}
-.title {
-  font-weight: bold;
-  font-size: 1.2em; 
-}
-
 .card {
   display: inline-block;
   vertical-align: top;
@@ -35,41 +16,46 @@ div {
   text-align: center;
 }
 
-.App {
+.card {
+  display: inline-block;
+  vertical-align: top;
+  font-family: system-ui;
+  background: #5bb4c4;
+  color: white;
+  text-align: center;
+  width: 180px;
+  height: 240px;
+  margin: 10px;
+  padding: 10px;
+  position: relative;
+}
+
+.title {
+  font-weight: bold;
+  font-size: 1.2em; 
+}
+
+
+h1 {
+  text-align: center;
+  background-color: grey;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+.container{
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+
+
+.title {
+  font-weight: bold;
+  font-size: 1.2em; 
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+div {
+  padding: 20px;
 }
