--- a/tasky/src/App.css
+++ b/tasky/src/App.css
@@ -1,26 +1,3 @@
-.card {
-  display: inline-block;
-  vertical-align: top;
-  font-family: system-ui;
-  background: #5bb4c4;
-  color: white;
-  text-align: center;
-  width: 180px;
-  height: 240px;
-  margin: 10px;
-  padding: 10px;
-  position: relative;
-}
-
-.container{
-  text-align: center;
-}
-
-.title {
-  font-weight: bold;
-  font-size: 1.2em; 
-}
-
 h1 {
   text-align: center;
   background-color: grey;
@@ -33,4 +10,31 @@ h1 {
 
 div {
   padding: 20px;
+}
+
+.container{
+  text-align: center;
+}
+
+.card {
+  text-align: center;
+  display: inline-block;
+  vertical-align: top;
+  font-family: system-ui;
+  background: #5bb4c4;
+  color: white;
+  width: 180px;
+  height: 240px;
+  margin: 10px;
+  padding: 10px;
+  position: relative;
+}
+
+.title {
+  font-weight: bold;
+  font-size: 1.2em; 
+}
+
+.description{
+  font-style: italic;
 }
