--- a/tasky/src/App.css
+++ b/tasky/src/App.css
@@ -4,8 +4,10 @@ h1 {
   color: white;
   padding: 14px 20px;
   margin: 8px 0;
-  border: none;
-  border-radius: 4px;
+  border-width: 8pt;
+  border-radius: 20%;
+  border-style: groove;
+  border-color: black;
 }
 
 div {
